fix z-index of map

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,7 @@
 .leaflet-container {
   width: 100vw;
   height: 100vh;
+  z-index: 1;
 }
 
 .info-modal {
